use old collectors method to prevent runtime error